--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
             <div class="button-row">
                 <button id="startGame" class="start-button" disabled>开始游戏</button>
                 <button id="shuffleButton" class="shuffle-button" disabled>打乱剩余块</button>
+                <button id="hintButton" class="hint-button" disabled>提示</button>
             </div>
         </div>
         <div class="game-container">
