--- a/index.html
+++ b/index.html
@@ -3,62 +3,57 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>水果连连看</title>
+    <title>连连看</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
-        <div class="game-info">
-            <div class="timer">
-                <span>剩余时间：</span>
-                <span id="timeLeft">60</span>
-                <span>秒</span>
-            </div>
-            <div class="score">
-                <span>当前积分：</span>
-                <span id="currentScore">0</span>
-                <span>/</span>
-                <span id="targetScore">60</span>
-            </div>
-        </div>
-        <div class="upload-section">
-            <h1>水果连连看</h1>
-            <div class="upload-row">
-                <div class="upload-container">
-                    <label for="imageUpload" class="upload-label">
-                        <span class="upload-icon">📁</span>
-                        <span class="upload-text">点击选择20张水果图片</span>
-                    </label>
-                    <input type="file" id="imageUpload" accept="image/*" multiple>
-                    <div id="imagePreview" class="image-preview"></div>
-                    <div id="uploadStatus" class="upload-status"></div>
+        <div class="left-panel">
+            <div class="upload-section">
+                <div class="image-upload">
+                    <h3>上传图片</h3>
+                    <input type="file" id="imageUpload" multiple accept="image/*">
+                    <div class="image-preview" id="imagePreview"></div>
+                    <p id="uploadStatus">请上传20张图片</p>
                 </div>
-                <div class="upload-container">
-                    <label for="backgroundUpload" class="upload-label">
-                        <span class="upload-icon">🎨</span>
-                        <span class="upload-text">点击选择背景图片</span>
-                    </label>
-                    <input type="file" id="backgroundUpload" accept="image/*">
-                    <div id="backgroundPreview" class="background-preview"></div>
-                    <div id="backgroundStatus" class="upload-status"></div>
+                <div class="background-upload">
+                    <h3>背景图片</h3>
+                    <input type="file" id="backgroundUpload" multiple accept="image/*">
+                    <div class="background-preview" id="backgroundPreview"></div>
+                    <div class="background-controls">
+                        <button id="prevBackground" class="background-btn">上一张</button>
+                        <button id="nextBackground" class="background-btn">下一张</button>
+                    </div>
+                    <p id="backgroundStatus">请上传背景图片</p>
                 </div>
             </div>
-            <div class="button-row">
-                <button id="startGame" class="start-button" disabled>开始游戏</button>
-                <button id="shuffleButton" class="shuffle-button" disabled>打乱剩余块</button>
-                <button id="hintButton" class="hint-button" disabled>提示</button>
-                <button id="modeButton" class="mode-button">切换模式</button>
+            <div class="game-controls">
+                <button id="startGame">开始游戏</button>
+                <button id="shuffleButton" disabled>重排</button>
+                <button id="hintButton" disabled>提示</button>
+                <button id="modeButton">计时模式</button>
+            </div>
+            <div class="game-info">
+                <div class="score-display">
+                    <span>当前分数: </span>
+                    <span id="currentScore">0</span>
+                    <span>/</span>
+                    <span id="targetScore">60</span>
+                </div>
+                <div class="timer-display">
+                    <span>剩余时间: </span>
+                    <span id="timeLeft">60</span>
+                    <span>秒</span>
+                </div>
             </div>
         </div>
-        <div class="game-container">
-            <div id="gameBoard" class="game-board"></div>
-        </div>
-        <div class="history-panel">
-            <h2>历史记录</h2>
-            <div class="history-list" id="historyList">
-                <!-- 历史记录将通过 JavaScript 动态添加 -->
+        <div class="game-board" id="gameBoard"></div>
+        <div class="right-panel">
+            <div class="history-section">
+                <h3>历史记录</h3>
+                <button id="clearHistory">清空历史</button>
+                <div class="history-list" id="historyList"></div>
             </div>
-            <button id="clearHistory" class="clear-history-button">清空记录</button>
         </div>
     </div>
     <script src="script.js"></script>
