fix(初始默认显示选择模型，优化计时模式惩罚分）

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <button id="startGame">开始游戏</button>
                 <button id="shuffleButton" disabled>重排</button>
                 <button id="hintButton" disabled>提示</button>
-                <button id="modeButton">计时模式</button>
+                <button id="modeButton">选择模式</button>
             </div>
             <div class="game-info">
                 <div class="score-display">
